config/objects/Tender__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_At__c</fullName>
        <label>Effective At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expires_At__c</fullName>
        <label>Expires At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Name__c</fullName>
        <formula>Load__r.Name</formula>
        <label>Load Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Type__c</fullName>
        <formula>text(Load__r.Type__c)</formula>
        <label>Load Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responded_At__c</fullName>
        <label>Responded At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Responded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responded By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tenders (Responded By)</relationshipLabel>
        <relationshipName>Tenders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Note__c</fullName>
        <label>Response Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <picklist>
            <picklistValues>
                <fullName>ACCEPTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tendered_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tendered To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Estimated Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Tender</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Load__c</columns>
        <columns>Company__c</columns>
        <columns>Load_Type__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Tender Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Response_Must_Be_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isnull(Responded_At__c)),isblank(text(Response__c)))</errorConditionFormula>
        <errorMessage>You cannot set a responded at date and time without a response.</errorMessage>
    </validationRules>
</CustomObject>